--- a/README.adoc
+++ b/README.adoc
@@ -18,13 +18,21 @@ link:ha-protonmail-bridge/DOCS.md[Read the full documentation]
 .Build the image in the ha-protonmail-bridge directory
 [source]
 ----
-docker build --build-arg BUILD_FROM="homeassistant/armv7-base:latest" -t local/my-test-addon .
+docker build --build-arg BUILD_FROM="homeassistant/amd64-base:latest" -t local/my-test-addon .
 ----
 
 .Run built image
 [source]
 ----
-docker run --rm -v /tmp/my_test_data:/data -p 25:2525  local/my-test-addon
+docker run --rm -v /tmp/my_test_data:/data -p 25:2525 local/my-test-addon
+----
+
+Inside the directory `my_test_data`, create a file called `options.json` with the correct configuration for the addon.
+
+.Start a shell in the image to debug
+[source]
+----
+docker run --rm -v /tmp/my_test_data:/data -p 25:2525  -ti --entrypoint bash local/my-test-addon
 ----
 
 == License
