Supports amd64 architecture
* Added documentation about the architecture support
* Added badge about the repository licence

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = Home Assistant add-ons repository
 
+image::https://img.shields.io/github/license/fboulay/ha-addons-repository.svg[licence]
+
 == About
 
 Here, you will find all my add-ons for Home Assistant
