--- a/ha-protonmail-bridge/translations/fr.yaml
+++ b/ha-protonmail-bridge/translations/fr.yaml
@@ -1,11 +1,11 @@
 ---
 configuration:
   username:
-    name: adresse mail
-    description: L'adresse mail principale de votre compte ProtonMail
+    name: nom d'utilisateur
+    description: Le nom d'utilisateur de votre compte ProtonMail
   password:
     name: mot de passe
     description: Votre mot de passe ProtonMail
   two_factor_code:
-    name: 2fa
+    name: code 2fa
     description: Si activé sur votre compte, il s'agit du code 2fa pour se connecter. Il est uniquement nécessaire lors de la première configuration de cet addon.
